--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,38 +1,53 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.minook.zeppa"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:orientation="vertical" >
 
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        style="@style/HeaderBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="@color/teal"
+        app:popupTheme="@style/ActionBarPopupThemeOverlay"
+        app:theme="@style/ZeppaActionBarStyle" />
 
-    <LinearLayout
-        android:id="@+id/navigation_cabinet"
-        android:layout_width="wrap_content"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:dividerHeight="1dp"
-        android:minWidth="300dp"
-        android:orientation="vertical" >
+        android:background="@color/white" >
 
-        <ImageView
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:background="@color/teal"
-            android:padding="10dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/logo_white" />
+            android:layout_height="match_parent" />
 
-        <ListView
-            android:id="@+id/navigation_drawer_list"
+        <LinearLayout
+            android:id="@+id/navigation_cabinet"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/white_eggshell" />
-    </LinearLayout>
+            android:layout_gravity="start"
+            android:dividerHeight="1dp"
+            android:minWidth="300dp"
+            android:orientation="vertical" >
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_gravity="center"
+                android:background="@color/teal"
+                android:padding="10dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/logo_white" />
 
-</android.support.v4.widget.DrawerLayout>
+            <ListView
+                android:id="@+id/navigation_drawer_list"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/white_eggshell" />
+        </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
+
+</LinearLayout>
