--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_fragment">
+    android:background="@drawable/background_fragment" >
 
     <com.astuetz.viewpager.extensions.PagerSlidingTabStrip
         android:id="@+id/home_pager_tabs"
@@ -10,10 +10,29 @@
         android:layout_height="40dp"
         android:layout_alignParentTop="true" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_pager"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/home_pager_tabs" />
+        android:layout_below="@id/home_pager_tabs" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/main_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageButton
+            android:id="@+id/home_add"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:padding="30dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/background_button_bluecircle"
+            android:src="@drawable/ic_menu_add" />
+    </RelativeLayout>
 
 </RelativeLayout>
