--- a/res/layout/fragment_minglers.xml
+++ b/res/layout/fragment_minglers.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:animateLayoutChanges="true"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <include
@@ -11,11 +11,30 @@
         layout="@layout/view_loaderview"
         android:visibility="gone" />
 
-    <ListView
-        android:id="@+id/contactsListView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@color/gray_light"
-        android:dividerHeight="2dp" />
+        android:layout_height="match_parent" >
+
+        <ListView
+            android:id="@+id/minglers_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/gray_light"
+            android:dividerHeight="2dp" />
+
+        <ImageButton
+            android:id="@+id/minglers_add"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/background_button_bluecircle"
+            android:padding="30dp"
+            android:src="@drawable/ic_menu_add" />
+    </RelativeLayout>
 
 </LinearLayout>
