--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -88,6 +88,7 @@
                 android:id="@+id/settingsfragment_notificationsbytypeholder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical"
                 android:paddingLeft="10dp"
                 android:paddingStart="10dp" >
@@ -227,7 +228,7 @@
             android:paddingEnd="5dp"
             android:paddingLeft="20dp"
             android:paddingRight="5dp"
-            android:paddingStart="20dp"/>
+            android:paddingStart="20dp" />
 
         <View
             android:layout_width="match_parent"
