--- a/res/layout/activity_eventview.xml
+++ b/res/layout/activity_eventview.xml
@@ -32,9 +32,9 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center_vertical"
-                        android:background="@drawable/background_contact_picture"
                         android:contentDescription="@string/contdesc_hostimage"
                         android:padding="1dp"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/default_user_image" />
 
                     <RelativeLayout
