--- a/res/layout/fragment_account.xml
+++ b/res/layout/fragment_account.xml
@@ -18,12 +18,12 @@
                 android:id="@+id/accountfragment_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="7dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
-                android:background="@drawable/background_contact_picture"
+                android:layout_marginTop="7dp"
                 android:contentDescription="@string/contdesc_contactimage"
                 android:padding="1dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/default_user_image" />
 
             <LinearLayout
@@ -52,6 +52,7 @@
                     android:layout_marginTop="4dp"
                     android:background="@drawable/background_listitem_default"
                     android:drawableLeft="@drawable/ic_phone_image"
+                    android:drawablePadding="4dp"
                     android:drawableStart="@drawable/ic_phone_image" />
 
                 <TextView
@@ -65,6 +66,7 @@
                     android:layout_marginTop="4dp"
                     android:background="@drawable/background_listitem_default"
                     android:drawableLeft="@drawable/ic_mail_image"
+                    android:drawablePadding="4dp"
                     android:drawableStart="@drawable/ic_mail_image" />
             </LinearLayout>
         </LinearLayout>
@@ -108,11 +110,8 @@
                 android:hint="@string/newtag"
                 android:inputType="textCapWords"
                 android:lines="1"
-                android:maxLength="25"
-                android:minWidth="200dp"
-                android:paddingBottom="2dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp" />
+                android:maxLength="20"
+                android:minWidth="200dp" />
         </RelativeLayout>
 
         <LinearLayout
