--- a/res/layout/fragment_calendar.xml
+++ b/res/layout/fragment_calendar.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/calendarfragment_ptr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_fragment" >
+    android:background="@drawable/background_fragment"
+    android:orientation="vertical" >
 
-<!--     <com.tyczj.extendedcalendarview.ExtendedCalendarView
-        android:id="@+id/calendar"
+    <FrameLayout
+        android:id="@+id/calendarfragment_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" /> -->
+        android:layout_height="match_parent" />
 
-</RelativeLayout>
+</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
