--- a/res/layout/fragment_minglers.xml
+++ b/res/layout/fragment_minglers.xml
@@ -19,7 +19,7 @@
             android:id="@+id/minglers_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@color/gray_light"
+            android:divider="@color/white"
             android:dividerHeight="2dp" />
 
         <ImageButton
