--- a/res/layout/view_addcontact_itemsend.xml
+++ b/res/layout/view_addcontact_itemsend.xml
@@ -15,9 +15,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/background_contact_picture"
         android:contentDescription="@string/contdesc_contactimage"
         android:padding="1dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_user_image" />
 
     <CheckedTextView
