--- a/res/layout/view_basicuseritem.xml
+++ b/res/layout/view_basicuseritem.xml
@@ -16,9 +16,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/background_contact_picture"
         android:contentDescription="@string/contdesc_contactimage"
         android:padding="1dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_user_image" />
 
     <TextView
@@ -27,11 +27,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginRight="4dp"
         android:layout_marginEnd="4dp"
-        android:layout_toRightOf="@id/contacts_listitem_picture"
-        android:layout_toEndOf="@id/contacts_listitem_picture" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@id/contacts_listitem_picture"
+        android:layout_toRightOf="@id/contacts_listitem_picture" />
 
 </RelativeLayout>
