--- a/res/layout/view_comment.xml
+++ b/res/layout/view_comment.xml
@@ -7,15 +7,15 @@
     android:orientation="horizontal" >
 
     <ImageView
-        android:layout_marginLeft="15dp"
         android:id="@+id/comment_pic"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="top"
+        android:layout_marginLeft="15dp"
         android:layout_marginRight="3dp"
         android:layout_marginTop="3dp"
-        android:background="@drawable/background_contact_picture"
-        android:padding="1dp" />
+        android:padding="1dp"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="wrap_content"
