--- a/res/layout/view_invitelist_item.xml
+++ b/res/layout/view_invitelist_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_listitem_default"
     android:orientation="horizontal" >
 
@@ -9,7 +9,9 @@
         android:id="@+id/inviteitem_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_margin="3dp"
         android:clickable="false" />
 
@@ -17,23 +19,28 @@
         android:id="@+id/inviteitem_contactimage"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/background_contact_picture"
+        android:layout_toEndOf="@id/inviteitem_checkbox"
+        android:layout_toRightOf="@id/inviteitem_checkbox"
         android:clickable="false"
         android:contentDescription="@string/contdesc_userimage"
         android:padding="1dp"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_user_image" />
 
     <TextView
         android:id="@+id/inviteitem_contactname"
         style="@style/black_txt18sp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_toEndOf="@id/inviteitem_contactimage"
+        android:layout_toRightOf="@id/inviteitem_contactimage"
         android:clickable="false" />
 
-</LinearLayout>
+</RelativeLayout>
