--- a/res/layout/fragment_agenda.xml
+++ b/res/layout/fragment_agenda.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/watchingfragment_ptr"
+    android:id="@+id/agendafragment_ptr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/watchingListView"
+        android:id="@+id/agendaListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_fragment"
