--- a/app/src/main/res/layout/view_eventactionbar.xml
+++ b/app/src/main/res/layout/view_eventactionbar.xml
@@ -23,24 +23,24 @@
         android:layout_gravity="center_vertical"
         android:background="@color/gray_light" />
 
-    <TextView
-        android:id="@+id/quickaction_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_button_eventaction"
-        android:drawableLeft="@drawable/ic_quickaction_text"
-        android:drawablePadding="5dp"
-        android:drawableStart="@drawable/ic_quickaction_text"
-        android:gravity="center"
-        android:padding="7dp"
-        android:text="@string/text"
-        android:textSize="14sp" />
+    <!--<TextView-->
+        <!--android:id="@+id/quickaction_text"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/background_button_eventaction"-->
+        <!--android:drawableLeft="@drawable/ic_quickaction_text"-->
+        <!--android:drawablePadding="5dp"-->
+        <!--android:drawableStart="@drawable/ic_quickaction_text"-->
+        <!--android:gravity="center"-->
+        <!--android:padding="7dp"-->
+        <!--android:text="@string/text"-->
+        <!--android:textSize="14sp" />-->
 
-    <View
-        android:layout_width="1px"
-        android:layout_height="20dp"
-        android:layout_gravity="center_vertical"
-        android:background="@color/gray_light" />
+    <!--<View-->
+        <!--android:layout_width="1px"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:background="@color/gray_light" />-->
 
     <CheckBox
         android:id="@+id/quickaction_join"
